fixed some alignment and may need to revert to previous commit

--- a/client/src/components/UI/card/Card.module.scss
+++ b/client/src/components/UI/card/Card.module.scss
@@ -17,7 +17,11 @@
 	.header {
 		font-size: large;
 	}
-	@media (min-width: 2260px) {
+}
+
+@media (min-width: 2260px) {
+	.card-body {
+		height: 700px;
 		.header {
 			font-size: 3rem;
 		}
